--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 #Ignore thumbnails created by Windows
 Thumbs.db
 #Ignore files built by Visual Studio
+.vscode*
 environment.yml
+docs/html
+docs/latex
 *.obj
 *.exe
 *.pdb
