--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -1,4 +1,5 @@
 
 # These tests can use the Catch2-provided main
 add_executable(test_project test.cpp)
-target_link_libraries(test_project PRIVATE Catch2::Catch2)
+target_link_libraries(test_project PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(test_project PRIVATE Eigen3::Eigen)
