Add Electric Field visualization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ target_link_libraries(Lightning PUBLIC Eigen3::Eigen Graphics Physics)
 
 install(TARGETS Lightning DESTINATION bin)
 #install(DIRECTORY tests/ DESTINATION tests)
-install(TARGETS test_project DESTINATION unit_tests)
+install(TARGETS test_physics DESTINATION unit_tests)
