--- a/libs/graphics/CMakeLists.txt
+++ b/libs/graphics/CMakeLists.txt
@@ -1,10 +1,10 @@
 
 file(GLOB SOURCES *.cpp)
 message(${SOURCES})
-add_library (SDL_Wrapper STATIC ${SOURCES})
+add_library (Graphics STATIC ${SOURCES})
 
 
-#target_include_directories(SDL_Wrapper PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
-#target_link_libraries(SDL_Wrapper PRIVATE ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} Eigen3::Eigen)
-target_include_directories(SDL_Wrapper PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
-target_link_libraries(SDL_Wrapper PRIVATE ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} Eigen3::Eigen)
+#target_include_directories(Graphics PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+#target_link_libraries(Graphics PRIVATE ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} Eigen3::Eigen)
+target_include_directories(Graphics PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+target_link_libraries(Graphics PRIVATE ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} Eigen3::Eigen)
