--- a/tests/unit_tests/CMakeLists.txt
+++ b/tests/unit_tests/CMakeLists.txt
@@ -1,5 +1,4 @@
 
-# These tests can use the Catch2-provided main
-add_executable(test_project test.cpp)
-target_link_libraries(test_project PRIVATE Catch2::Catch2WithMain)
-target_link_libraries(test_project PRIVATE Eigen3::Eigen)
+add_executable(test_physics test_physics.cpp)
+target_include_directories(test_physics PRIVATE ${PROJECT_SOURCE_DIR}/libs/physics)
+target_link_libraries(test_physics PRIVATE Eigen3::Eigen Catch2::Catch2WithMain Physics)
