--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -15,26 +15,20 @@ jobs:
       # uses: conda-incubator/setup-miniconda@35d1405e78aa3f784fe3ce9a2eb378d5eeb62169
       uses: conda-incubator/setup-miniconda@v2.1.1
       with:
-        auto-activate-base: true
+        activate-environment: ''
         # Conda configuration. Comma separated list of channels to use in order of priority. See https://docs.conda.io/projects/conda/en/latest/user-guide/configuration/ for more information.
         channels: conda-forge
         auto-update-conda: true
         python-version: '3.9'
-    - name: Conda info
-      shell: bash -l {0}
-      run: conda info
-    - name: Conda list
-      shell: pwsh
-      run: conda list
-    - name: Environment
-      shell: bash -l {0}
-      run: printenv | sort
     - name: Install dependencies
       shell: bash -l {0}
       run: |
+        conda info
+        conda list
         conda install conda-devenv -c conda-forge
         conda install mamba -c conda-forge  
         conda devenv
+        conda env --list
         
     - name: Compile
       shell: bash -l {0}
