--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(Eigen3 3.0.4 REQUIRED)
 # add tests 
 add_subdirectory(tests/unit_tests)
 
+add_subdirectory(deps)
 # graphics library
 add_subdirectory(libs/graphics)
 add_subdirectory(libs/physics)
@@ -24,7 +25,7 @@ add_executable (Lightning ${SOURCES})
 target_include_directories(Lightning PRIVATE ${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
 target_link_libraries(Lightning PUBLIC  ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 target_include_directories(Lightning PRIVATE libs src)
-target_link_libraries(Lightning PUBLIC Eigen3::Eigen Graphics Physics)
+target_link_libraries(Lightning PUBLIC Eigen3::Eigen Graphics Physics SimpleArgParser)
 
 
 install(TARGETS Lightning DESTINATION bin)
