Finish test support

--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -33,4 +33,8 @@ jobs:
       run: |
         conda activate lightning
         inv build
+    - name: Test
+      shell: bash -l {0}
+      run: |
+        inv test
         
