--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,4 +6,4 @@ repos:
       - id: clang-format
         args: [--style=file, -i]
       - id: cppcheck
-        args: [ --inline-suppr, --suppress=*:deps/* ]
+        args: [ --inline-suppr, --suppress=unusedFunction ]
