--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -37,5 +37,7 @@ jobs:
       shell: bash -l {0}
       run: |
         conda activate lightning
+        env | grep LD
+        env | grep LIGHT
         inv test
         
